# lambda-os

./: .gitignore  LICENSE  README.md  RUNBOOK.md  pyproject.toml
.github/workflows/: ci.yml
agentix_logos/: __init__.py  audit.py  audit_chain.py  cli.py  daemon.py  dashboard.py  depgraph.py  governance.py  keys.py  lez.py  mix.py  modules.py  notify.py  policy.py  profiles.py  proposals.py  selfheal.py  verify_logoscore.py  workspace.py
agentix_logos_module/: __init__.py  agentix_logos_module.py  flake.nix  metadata.json  method_dispatch.py
agentix_logos_module/cpp/: CMakeLists.txt  agentix_logos_interface.h  agentix_logos_plugin.cpp  agentix_logos_plugin.h
docs/: ARCHITECTURE.md  AUDIT-SCHEMA.md  BRIDGE-SPEC.md  CLAUDE-LOGOS-CONTROLLER.md  CODEX-AUDIT-ANCHOR.md  INTEGRATION.md  MODULE.md  POLICY-SCHEMA.md  TESTING.md
examples/: goal-configure-mix.md  goal-deploy-lez-program.md  goal-install-irc.md  goal-multi-profile-basecamp.md  goal-swap-chat.md  goal-upgrade-storage.md  key-registry-stub.json  policy.json
nixos/: agentix-logos.nix  logos-node.nix
scripts/: demo.sh  integration-test.sh  public-check.sh
tests/: test_audit_chain.py  test_daemon.py  test_governance.py  test_keys.py  test_lez.py  test_mix.py  test_module.py  test_policy_signed.py  test_profiles.py  test_proposals.py  test_smoke.py  test_t1_verify_build.py  test_t2_snapshot.py  test_t3_policy_drift.py  test_t4_flake_override.py  test_t5_audit_show.py  test_t6_error_ux.py  test_verify_logos_host.py
